# aiba-jetson-backend

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py
app/core/: __init__.py  event_handlers.py  process.py  security.py
app/middlewares/: __init__.py  logger.py
app/models/: __init__.py
app/routes/v1/: __init__.py  heartbeat.py  stream.py
app/utils/: __init__.py  device.py
stt/: demo_main.py
vision/: hubconf.py  run.py
vision/midas/: base_model.py  model_loader.py
yolo/: __init__.py  requirements.txt  yolo_slowfast.py
yolo-instance/: stream.py  yolo_slowfast.py
yolo-instance/deep_sort/configs/: parser.py
yolo-instance/deep_sort/deep_sort/: __init__.py  deep_sort.py
yolo-instance/deep_sort/deep_sort/deep/: test.py  train.py
yolo-instance/deep_sort/deep_sort/sort/: detection.py  linear_assignment.py  track.py
yolo/deep_sort/deep_sort/deep/: feature_extractor.py  test.py  train.py
yolo/deep_sort/deep_sort/sort/: iou_matching.py  tracker.py
yolo/selfutils/: slowfast_detection.py
