[tool.poetry]
name = "aiba-backend"
version = "0.1.0"
description = "FastAPI-based backend for AIBA"
authors = ["Hyunwoo Cho <truetype24@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aiba_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
